chore: add unknown words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,10 +20,12 @@
     "depguard",
     "dupl",
     "durationcheck",
+    "eamodio",
     "errcheck",
     "errchkjson",
     "errname",
     "errorlint",
+    "esbenp",
     "execinquery",
     "exportloopref",
     "forbidigo",
@@ -44,7 +46,9 @@
     "gomnd",
     "gomoddirectives",
     "gomodguard",
+    "gopath",
     "goprintffuncname",
+    "goroot",
     "gosec",
     "gosimple",
     "govet",
@@ -62,9 +66,9 @@
     "nlreturn",
     "noctx",
     "nolintlint",
-    "stretchr",
     "nonamedreturns",
     "nosprintfhostport",
+    "nosql",
     "paralleltest",
     "prealloc",
     "predeclared",
@@ -72,6 +76,7 @@
     "rowserrcheck",
     "sqlclosecheck",
     "staticcheck",
+    "stretchr",
     "structcheck",
     "stylecheck",
     "tenv",
@@ -83,6 +88,7 @@
     "varcheck",
     "varnamelen",
     "wastedassign",
+    "wayou",
     "wrapcheck"
   ]
 }
