feat: implement `chapter 1`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
     "exportloopref",
     "forbidigo",
     "forcetypeassert",
+    "freelist",
     "funlen",
     "gochecknoglobals",
     "gochecknoinits",
