feat: implement `chapter 4`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
     "prealloc",
     "predeclared",
     "promlinter",
+    "rebalance",
     "rowserrcheck",
     "sqlclosecheck",
     "staticcheck",
