feat: implement `chapter 5`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,10 +72,12 @@
     "nosprintfhostport",
     "nosql",
     "paralleltest",
+    "pnode",
     "prealloc",
     "predeclared",
     "promlinter",
     "rebalance",
+    "rebalancing",
     "rowserrcheck",
     "sqlclosecheck",
     "staticcheck",
