feat: implement `chapter 6`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,7 @@
     "rebalance",
     "rebalancing",
     "rowserrcheck",
+    "rwlock",
     "sqlclosecheck",
     "staticcheck",
     "stretchr",
